--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 STRIPE_PUBLISHABLE_KEY=pk_test_j4FVORmnyI2bG6DlBqeqcnAC
 STRIPE_SECRET_KEY=sk_test_cBDaCSjSvLh7TvcM8PRoIRof
+ADMIN_USERNAME=PLACE_HOLDER
+ADMIN_PASSWORD=PLACE_HOLDER
